# ESMRMB_2025_QA_lowfield_MRI

./: README.md  pyproject.toml
src/: write_qa_report.py
src/qa/: qa_report.py
src/qa_data/multi_rep/: QA_results_2025-04-30-161214-tse_3d.xlsx  QA_results_2025-05-12-144626-tse_3d.xlsx
src/qa_data/multi_rep/2025-04-30-161214-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-161627-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-162021-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-162440-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-162835-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-163241-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-163643-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-164036-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-164430-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-04-30-164831-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-144626-tse_3d/: image_mag.nii  image_phase.nii  kspace.npy  meta.json  sequence.seq
src/qa_data/multi_rep/2025-05-12-145020-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-145415-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-145814-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-150648-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-151040-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-151435-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-151831-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-152231-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-152629-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-153028-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep/2025-05-12-153424-tse_3d/: kspace.npy  meta.json
src/qa_data/multi_rep_noise/: image_mag.nii  image_phase.nii  kspace.npy  meta.json  sequence.seq
src/utilities/: sequence_helper.py
